# golf-swing-coach-agent

./: .gitignore  dedup_folder_report.json  dedup_numbered_report.json  dedup_report.json  family_search.py  family_search_aws.py  mad-man-agents.ipynb  mad-man-agents.py  mad-man-ui.py  ollama-gemma-api-call.ipynb  requirements.txt
atk-recipe-search/: 1_lab1 copy_jk_fix.ipynb
gemma4-play/: test.py
golf-swing-coach-agent/: .gitignore  =0.10.15  Dockerfile  README.md  app.py  crew.py  main.py  packages.txt  pyproject.toml  requirements.txt  test_crew.py  test_tool.py  upload_to_hf.py
golf-swing-coach-agent/golf_swing_coach_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
golf-swing-coach-agent/tools/: swing_analyzer_tool.py
golf-swing-coach-agent/utils/: pose_utils.py
hf_family_search/: .gitignore  README.md  app.py  deploy_to_hf.py  deploy_to_hf.sh  requirements.txt
test-nvidia-cloud-api-call/: minimax_gradio_chat.py  requirements.txt  snake-game.py  test-minimax-completion-call.py
