[project]
name = "golf-swing-coach-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=1.9.3",
    "crewai-tools>=1.9.3",
    "langchain-openai>=0.3.23",
    "moviepy>=2.2.1",
    "numpy>=1.21.1,<2",
    "opencv-python==4.9.0.80",
    "mediapipe>=0.10.15",
    "pydantic>=2.11.10",
    "rich>=14.3.4",
    "streamlit>=1.56.0",
]

[tool.uv]
required-environments = ["sys_platform == 'darwin' and platform_machine == 'arm64'"]

[tool.setuptools.packages.find]
exclude = ["outputs", "sample_swings"]
